fixed text overflow

--- a/src/components/LayerMenu/SatelliteLayerSelector.scss
+++ b/src/components/LayerMenu/SatelliteLayerSelector.scss
@@ -26,6 +26,8 @@
 
 .labelContent {
     text-transform: capitalize;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .colorbarWrapper {
